--- a/styles/result.css
+++ b/styles/result.css
@@ -15,13 +15,16 @@ body {
   text-align: center;
 }
 
+button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
 button, input {
   font: inherit;
   background-color: inherit;
   color: inherit;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
 }
 
 a {
