--- a/styles/settings.css
+++ b/styles/settings.css
@@ -24,13 +24,16 @@ body {
   display: flex;
 }
 
+button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
 button, input {
   font: inherit;
   background-color: inherit;
   color: inherit;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
 }
 
 a {
