--- a/styles/test.css
+++ b/styles/test.css
@@ -15,13 +15,16 @@ body {
   font-size: 4.5vmin;
 }
 
+button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
 button, input {
   font: inherit;
   background-color: inherit;
   color: inherit;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
 }
 
 a {
