--- a/styles/test.css
+++ b/styles/test.css
@@ -19,6 +19,7 @@ button {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+    padding: 0;
 }
 
 button, input {
