--- a/styles/settings.css
+++ b/styles/settings.css
@@ -28,6 +28,7 @@ button {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+    padding: 0;
 }
 
 button, input {
